# ACPP_shared_memory_issue

./: CMakeLists.txt  README.md
cmake/: AcppConfig.cmake  SyclConfig.cmake
src/saxpy/: CMakeLists.txt  saxpy.cpp
